EXTRA_DIST = acx_mpi.m4 acx_pthread.m4 ax_cc_maxopt.m4	\
ax_check_compiler_flags.m4 ax_compiler_vendor.m4	\
ax_gcc_aligns_stack.m4 ax_gcc_version.m4 ax_openmp.m4

# libtool sticks a bunch of extra .m4 files in this directory,
# but they don't seem to be needed for the distributed tarball
# (they aren't needed for configure && make, and boostrapping
# will regenerate them anyway).
